--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ img {
     position: absolute;
     display: block;
     /* Adds a translucent white border for easier visibility */
-    border: 3px solid rgba(255, 255, 255, 1);
+    border: 2px solid rgba(255, 255, 255, 1);
     /* Animates circle to overlay */
     transition: all 0.5s ease-in-out;
     /* All text inside is white */
@@ -167,14 +167,84 @@ img {
   YOUR TABLET/DESKTOP STYLES GO HERE
 *********************************************************************/
 @media(min-width: 681px) {
+
     /* Any adjustments for tablets and larger go here.
     Note these styles will be applied to anything 681px or larger -- so tablet AND desktop */
+    .dot {
+        /** Sets an equal height and width and sets border-radius to 50%,
+         * all of which combined makes a perfect circle */
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        /* Position absolute so we can place it anywhere */
+        position: absolute;
+        display: block;
+        /* Adds a translucent white border for easier visibility */
+        border: 5px solid rgba(255, 255, 255, 1);
+        /* Animates circle to overlay */
+        transition: all 0.5s ease-in-out;
+        /* All text inside is white */
+        color: #FFF;
+        /* Contains content when closing the overlay */
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+    .dot.orange.sign {
+        left: 50%;
+        bottom: 82%;
+        transform: translate(-50%, 82%);
+    }
+
+    .dot.blue.front {
+        left: 77%;
+        bottom: 66%;
+        transform: translate(-77%, 66%);
+    }
+
+    .dot.green.bank {
+        left: 89%;
+        bottom: 41%;
+        transform: translate(-89%, 41%);
+    }
+
+    .dot.red.pavement {
+        left: 52%;
+        bottom: 10%;
+        transform: translate(-52%, 10%);
+    }
+
+    .dot.purple.door {
+        left: 16%;
+        bottom: 32%;
+        transform: translate(-16%, 32%);
+    }
 }
 
 /*********************************************************************
   YOUR DESKTOP-ONLY STYLES GO HERE
 *********************************************************************/
 @media(min-width: 729px) {
+
     /* Any adjustments for desktop and larger go here.
     Note these styles will be applied to anything 729px or larger -- so desktop */
+    .dot {
+        /** Sets an equal height and width and sets border-radius to 50%,
+         * all of which combined makes a perfect circle */
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        /* Position absolute so we can place it anywhere */
+        position: absolute;
+        display: block;
+        /* Adds a translucent white border for easier visibility */
+        border: 3px solid rgba(255, 255, 255, 1);
+        /* Animates circle to overlay */
+        transition: all 0.5s ease-in-out;
+        /* All text inside is white */
+        color: #FFF;
+        /* Contains content when closing the overlay */
+        overflow: hidden;
+        cursor: pointer;
+    }
 }
